--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <version>5.0.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>pgjdbc-osgi-test</artifactId>
+            <version>42.3.6</version>
+        </dependency>
     </dependencies>
 
     <build>
