--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>postgresql</artifactId>
             <version>42.4.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>pgjdbc-osgi-test</artifactId>
+            <version>42.3.6</version>
+        </dependency>
     </dependencies>
 
     <build>
